- fixed selection color for high contrast theme

--- a/src/views/components/l13-diff-input/l13-diff-input.scss
+++ b/src/views/components/l13-diff-input/l13-diff-input.scss
@@ -16,6 +16,7 @@
 		z-index: 0;
 	
 		&::selection {
+			color: var(--vscode-selection-foreground, var(--l13-selection-foreground));
 			background: var(--vscode-selection-background, var(--l13-selection-background));
 		}
 		
