--- a/src/views/components/l13-diff-search/l13-diff-search.scss
+++ b/src/views/components/l13-diff-search/l13-diff-search.scss
@@ -59,6 +59,7 @@ input[type="text"] {
 	z-index: 0;
 	
 	&::selection {
+		color: var(--vscode-selection-foreground, var(--l13-selection-foreground));
 		background: var(--vscode-selection-background, var(--l13-selection-background));
 	}
 	
